Fix minor bugs with social widgets.
The placeholder for the Google +1 widget was 2 pixels too short.
The actual widget is too short, too, but I don't have any control
over that. No reason for the placeholder to be weird, though.

The reference to "element" within the widgets' onmouseover functions
was incorrect. Changed to "this" since that's what it should've
been in the first place.

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -252,20 +252,19 @@ ul {
 #twitter-widget {
     color: #fff;
     display: block;
+    line-height: 3.875em; /* 62px */
     text-align: center;
     text-decoration: none;
 }
 #facebook-widget {
     background: #3b5b99;
-    line-height: 3.875em;
 }
 #google-widget {
     background: #dd4b39;
-    line-height: 3.75em;
+    margin-top: -0.125em; /* 2px */
 }
 #twitter-widget {
     background: #33ccff;
-    line-height: 3.875em;
 }
 
 /*
